Further parsing improvements

--- a/parser_testing.ipynb
+++ b/parser_testing.ipynb
@@ -55,71 +55,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tomato and Egg Drop Noodle Soup \n",
+      "Sticky Rice With Mango \n",
       "\n",
-      "Morton kosher salt\n",
-      "1 small yellow or red onion\n",
-      "2 garlic cloves\n",
-      "1  piece ginger\n",
-      "1 scallion\n",
-      "12 other wheat noodles\n",
-      "2 vegetable oil\n",
-      "1 tomatoes\n",
-      "4 low-sodium vegetable broth\n",
-      "4 large eggs\n",
-      "4 Pinch freshly ground white pepper\n",
-      "3 (or more) light or dark brown sugar\n",
-      "3 chili oil\n",
-      "3 sauce\n",
+      "1 1/2 cups glutinous rice\n",
+      "1 1/3 cups well-stirred canned unsweetened coconut milk, divided\n",
+      "1/3 cup (67 grams) plus 3 tablespoon granulated sugar, divided\n",
+      "1/4 teaspoon kosher salt\n",
+      "1 tablespoon sesame seeds, toasted lightly\n",
+      "1 large mango, peeled, pitted, and cut into thin slices\n",
       "\n",
-      "Fill a small Dutch oven or large saucepan with water, season with salt, and bring to a boil. ['fill', 'bring'] [('salt', None)] ['a small Dutch oven', 'large saucepan'] [] ['a boil']\n",
-      "While water is coming to a bowl, prep your vegetables. ['prep'] [] ['a bowl'] [] []\n",
-      "Peel 1 small yellow or red onion , halve, and thinly slice into half-moons. ['peel'] [('small yellow or red onion', Fraction(1, 1))] [] [] []\n",
-      "Smash and peel 2 garlic cloves. ['smash', 'peel'] [('garlic cloves', Fraction(2, 1))] [] [] []\n",
-      "Finely chop. ['chop'] [] [] [] []\n",
-      "Scrape skin from one 1\" piece ginger with a spoon. ['scrape'] [(' piece ginger', Fraction(1, 1))] ['skin', 'a spoon'] [] []\n",
-      "Thinly slice ginger. ['thinly'] [] [] [] []\n",
-      "Stack slices two at a time and cut into matchsticks. ['stack'] [] [] [] []\n",
-      "Line up matchsticks and cut crosswise into tiny squares. ['line', 'cut'] [] [] [] []\n",
-      "Finely chop 1 scallion. ['chop'] [('scallion', Fraction(1, 1))] [] [] []\n",
-      "Set aside for serving. ['set'] [] [] [] []\n",
-      "Add 12 oz. ['add'] [] [] [] []\n",
-      "Instant ramen or other wheat noodles to the pot of boiling water and cook according to package directions until just tender. ['instant'] [('other wheat noodles', Fraction(12, 1))] ['the pot', 'just tender'] [] []\n",
-      "Drain in a colander and rinse under cold running water. ['drain'] [] [] [] []\n",
-      "Set aside. ['set'] [] [] [] []\n",
-      "Dry pot and reserve. ['dry'] [] ['dry pot'] [] []\n",
-      "Heat 2 Tbsp. ['heat'] [] [] [] []\n",
-      "Grapeseed or vegetable oil in reserved pot over medium-high. ['grapeseed', 'oil'] [('vegetable oil', Fraction(2, 1))] ['reserved pot'] [] []\n",
-      "Add onion and cook, stirring constantly, until soft and golden, about 5 minutes. ['add'] [] [] ['about 5 minutes'] []\n",
-      "Add garlic and ginger and cook, stirring, until fragrant, about 30 seconds. ['add'] [] [] ['about 30 seconds'] []\n",
-      "Add one 28-oz. ['add'] [] [] [] []\n",
-      "Can diced tomatoes and 4 cups low-sodium vegetable broth or water to pot. ['diced'] [('tomatoes', Fraction(1, 1)), ('low-sodium vegetable broth', Fraction(4, 1))] ['pot'] [] []\n",
-      "Reduce heat to medium, cover pot with a lid, and cook broth until flavors have come together, 10–15 minutes. ['reduce', 'cover', 'cook'] [] ['pot'] ['10–15 minutes'] ['heat']\n",
-      "Meanwhile, whisk 4 large eggs , 2 tsp. ['whisk'] [('large eggs', Fraction(4, 1))] ['meanwhile, whisk'] [] []\n",
-      "Diamond Crystal  or 1 tsp. ['Crystal', 'tsp'] [] [] [] []\n",
-      "Morton kosher salt , and a pinch of freshly ground white pepper in a large measuring glass or a small bowl with a lip. ['kosher', 'pinch'] [('salt', None), ('white pepper', Fraction(4, 1))] ['a large measuring glass', 'a small bowl'] [] []\n",
-      "Uncover broth and stir in 3 Tbsp. ['uncover', 'stir'] [] [] [] []\n",
-      "Light or dark brown or granulated sugar and add ½ tsp. ['light'] [] [] [] []\n",
-      "Diamond Crystal or ¼ Morton kosher salt. ['diamond'] [] [] [] []\n",
-      "Taste and add more sugar and/or salt if needed. ['taste', 'add'] [('more sugar', Fraction(3, 1)), ('salt', None)] [] [] []\n",
-      "The broth should be slightly sweet and a little tart. ['be'] [] [] [] []\n",
-      "Increase heat to medium-high and bring broth to a boil. ['increase', 'bring'] [] [] [] ['heat', 'a boil']\n",
-      "Very slowly trickle beaten eggs into soup (no need to stir). ['beaten'] [] [] [] []\n",
-      "Cook eggs until set, 30–60 seconds from when you start pouring. ['cook'] [] [] ['30–60 seconds'] []\n",
-      "Remove soup from heat. ['remove'] [] [] [] ['heat']\n",
-      "The egg doesn’t need to be totally cooked through—it will continue to cook in the residual heat of the broth. ['continue'] [] [] [] ['the residual heat']\n",
-      "Rinse noodles under running water again to loosen them up. ['rinse'] [] [] [] []\n",
-      "Divide among 4 bowls and ladle soup over. ['divide'] [] [] [] []\n",
-      "Drizzle with toasted sesame oil or chili oil and Maggi seasoning sauce or soy sauce and top with reserved scallions. ['drizzle'] [('chili oil', Fraction(3, 1)), ('soy sauce', Fraction(3, 1))] [] [] []\n",
-      "How would you rate Tomato and Egg Drop Noodle Soup?. ['rate'] [] [] [] []\n",
-      "Leave a Review. ['leave'] [] [] [] []\n",
+      "Rinse 1½ cups glutinous rice in a fine-mesh sieve under cold running water until water runs clear. ['rinse'] [('glutinous rice', Fraction(3, 2))] [] [] []\n",
+      "Transfer rice to medium bowl, fill with cold water to cover by 1\", and chill overnight. ['transfer', 'fill', 'chill'] [] ['medium bowl'] [] []\n",
+      "Drain rice well in a fine-mesh sieve. ['drain'] [] [] [] []\n",
+      "Set sieve over a large deep saucepan of simmering water (sieve should not touch water). ['set'] [] ['a large deep saucepan'] [] []\n",
+      "Cover with a kitchen towel and lid (towel will help lock in steam. ['cover'] [] [] [] []\n",
+      "But be cautious the it doesn’t droop down to an open flame burner), and steam rice 30–40 minutes, or until tender (check water level in pan occasionally, adding more if necessary). ['droop', 'rice', 'until'] [] ['tender', 'pan'] ['30–40 minutes'] []\n",
+      "While rice is cooking, bring 1 cup well-stirred canned unsweetened coconut milk , ⅓ cup (67 grams) granulated sugar , and ¼ teaspoon kosher salt to a boil in a small saucepan, stirring regularly, until sugar is dissolved. ['bring'] [('well-stirred canned unsweetened coconut milk', Fraction(1, 1)), ('granulated sugar', Fraction(67, 1)), ('¼ teaspoon kosher salt', Fraction(1, 4))] ['⅓ cup', 'a small saucepan'] [] ['a boil']\n",
+      "Remove from heat and keep mixture warm. ['remove', 'keep'] [] [] [] ['heat']\n",
+      "Transfer cooked rice to a bowl and stir in coconut milk mixture. ['transfer', 'stir'] [('coconut milk mixture', Fraction(1, 3))] ['a bowl'] [] []\n",
+      "Let rice stand, covered, 30 minutes, or until coconut milk mixture is absorbed. ['let', 'covered'] [] [] ['30 minutes'] []\n",
+      "Rice may be prepared up to this point 2 hours ahead and kept covered at room temperature. ['prepared', 'kept'] [] [] ['2 hours'] ['room temperature']\n",
+      "Meanwhile, boil remaining ⅓ cup coconut milk with remaining 3 tablespoon granulated sugar on medium heat, stirring occasionally, until sugar is dissolved and mixture has thickened slightly, about 1 minute. ['boil', 'stirring'] [] [] ['about 1 minute'] ['medium heat']\n",
+      "Transfer sauce to a small bowl and chill until cool. ['transfer'] [] ['a small bowl'] [] ['chill']\n",
+      "To serve, mold ¼ cup servings of coconut rice on dessert plates. ['serve'] [] ['dessert plates'] [] []\n",
+      "Drizzle plates with sweet coconut sauce and sprinkle 1 tablespoon sesame seeds, toasted lightly , over rice. ['toasted'] [] [] [] []\n",
+      "Divide 1 large mango, peeled, pitted, and cut into thin slices , among plates. ['divide'] [('large mango', Fraction(1, 1))] ['plates'] [] []\n",
+      "Join the home cook community. ['join'] [] [] [] []\n",
       "Food Innovation Group. ['Group'] [] [] [] []\n"
      ]
     }
@@ -128,8 +96,8 @@
     "import parser as p\n",
     "import util as u\n",
     "\n",
-    "recipe = p.get_recipe_from_url(\"https://www.bonappetit.com/recipe/tomato-and-egg-drop-noodle-soup\")\n",
-    "# recipe = p.get_recipe_from_url(\"https://www.epicurious.com/recipes/food/views/sticky-rice-with-mango-12066\")\n",
+    "# recipe = p.get_recipe_from_url(\"https://www.bonappetit.com/recipe/tomato-and-egg-drop-noodle-soup\")\n",
+    "recipe = p.get_recipe_from_url(\"https://www.epicurious.com/recipes/food/views/sticky-rice-with-mango-12066\")\n",
     "# recipe = p.get_recipe_from_url(\"https://www.seriouseats.com/parker-house-rolls-recipe-8733832\")\n",
     "# recipe = p.get_recipe_from_url(\"https://www.allrecipes.com/recipe/19644/moussaka/\")\n",
     "# recipe = p.get_recipe_from_url(\"https://www.allrecipes.com/recipe/218091/classic-and-simple-meat-lasagna/\")\n",
@@ -147,28 +115,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1½ NUM nummod cups NOUN [] CARDINAL\n",
-      "cups NOUN ROOT cups NOUN [1½, rice] \n",
-      "glutinous PROPN compound rice NOUN [] \n",
-      "rice NOUN appos cups NOUN [glutinous] \n",
+      "½ PROPN compound cup PROPN [] \n",
+      "cup PROPN nsubj divided VERB [½, (, g, ), plus, Tbsp, sugar, ,] \n",
+      "( PUNCT punct cup PROPN [] \n",
+      "67 NUM nummod g NOUN [] CARDINAL\n",
+      "g NOUN appos cup PROPN [67] \n",
+      ") PUNCT punct cup PROPN [] \n",
+      "plus CCONJ cc cup PROPN [] \n",
+      "3 NUM nummod Tbsp PROPN [] CARDINAL\n",
+      "Tbsp PROPN conj cup PROPN [3, .] \n",
+      ". PUNCT punct Tbsp PROPN [] \n",
+      "granulated VERB amod sugar NOUN [] \n",
+      "sugar NOUN appos cup PROPN [granulated] \n",
+      ", PUNCT punct cup PROPN [] \n",
+      "divided VERB ROOT divided VERB [cup] \n",
       "\n",
-      "1½ cups cups ROOT cups 0 2 1\n",
-      "glutinous rice rice appos cups 2 4 3\n",
+      "½ cup cup nsubj divided 0 2 1\n",
+      "67 g g appos cup 3 5 4\n",
+      "3 Tbsp Tbsp conj cup 7 9 8\n",
+      "granulated sugar sugar appos cup 10 12 11\n",
       "\n",
-      "1½ CARDINAL\n"
+      "67 CARDINAL\n",
+      "3 CARDINAL\n"
      ]
     }
    ],
    "source": [
     "# text = \"lay eggplant slices on paper towels\"\n",
-    "text = \"1½ cups glutinous rice\"\n",
+    "text = \"½ cup (67 g) plus 3 Tbsp. granulated sugar, divided\"\n",
     "# text = \"cook and stir until beef is browned, 8 to 10 minutes\"\n",
     "# text = \"scald milk in a saucepan over medium heat\"\n",
     "# text = \"meanwhile, place ground beef, garlic, oregano, garlic powder, salt, and black pepper in a large skillet over medium heat\"\n",
@@ -195,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -214,18 +195,11 @@
       "\n",
       "[Synset('saute.v.01')]\n",
       "[[Synset('change.v.02'), Synset('change_integrity.v.01'), Synset('cook.v.03'), Synset('fry.v.02'), Synset('saute.v.01')]]\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'u' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 20\u001b[0m\n\u001b[1;32m     18\u001b[0m print_verb_paths(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbake\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     19\u001b[0m print_verb_paths(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msaute\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 20\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mu\u001b[49m\u001b[38;5;241m.\u001b[39mNounType\u001b[38;5;241m.\u001b[39mfrom_str(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mseason\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[1;32m     21\u001b[0m \u001b[38;5;28mprint\u001b[39m(u\u001b[38;5;241m.\u001b[39mNounType\u001b[38;5;241m.\u001b[39mfrom_str(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtin\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[1;32m     22\u001b[0m \u001b[38;5;28mprint\u001b[39m(u\u001b[38;5;241m.\u001b[39mNounType\u001b[38;5;241m.\u001b[39mfrom_str(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmixer\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'u' is not defined"
+      "\n",
+      "[<NounType.TOOL: 5>, <NounType.MEASURE: 3>, <NounType.FOOD: 2>]\n",
+      "[<NounType.TOOL: 5>]\n",
+      "[<NounType.FOOD: 2>, <NounType.TOOL: 5>]\n",
+      "[]\n"
      ]
     }
    ],
@@ -249,7 +223,7 @@
     "print_hypernym_paths(\"yeast\")\n",
     "print_verb_paths(\"bake\")\n",
     "print_verb_paths(\"saute\")\n",
-    "print(u.NounType.from_str(\"season\"))\n",
+    "print(u.NounType.from_str(\"cups\"))\n",
     "print(u.NounType.from_str(\"tin\"))\n",
     "print(u.NounType.from_str(\"mixer\"))\n",
     "print(u.NounType.from_str(\"men\"))"
